--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<header id="header">
 			<div class="inner">
 				<a href="./" class="header-logo">
-					<img src="./img/logo.png" alt="CoachDash">
+					<img src="./img/logo.png" alt="CoachDash" class="logo-01">
+					<img src="./img/logo-blue.png" alt="CoachDash" class="logo-02">
 				</a>
 				<nav class="header-nav">
 					<ul class="header-nav__menu">
@@ -75,6 +76,243 @@
 					</div>
 					<div class="mv-img">
 						<img src="./img/mv-img.png" alt="CoachDash">
+					</div>
+				</div>
+			</section>
+			<section class="sec-setup">
+				<div class="inner">
+					<h2 class="c-ttl__01 c-al--c">
+						<span>Effortless</span>Setup,<span>Immediate</span>Results </h2>
+					<div class="c-txt__basic c-al--c mbpc-37 mbsp-30">
+						<p> Getting started with CoachDash is simple and smooth: </p>
+					</div>
+					<div class="setup-block">
+						<div class="setup-block__ct">
+							<ul class="setup-step c-txt__basic">
+								<li class="setup-step__item">
+									<span class="setup-step__number"> STEP <span>01</span>
+									</span>
+									<div class="setup-step__ct">
+										<h3 class="setup-step__ct-ttl">
+											<span class="setup-step__ct-ttl--img">
+												<img src="./img/icon-04.png" alt="Sync Your Calendar and Log In" class="img-01">
+												<img src="./img/icon-04-blue.png" alt="Sync Your Calendar and Log In" class="img-02">
+											</span> Sync Your Calendar and Log In </h3>
+										<p> With a few clicks, integrate your calendar and access your personalized CoachDash dashboard. </p>
+									</div>
+								</li>
+								<li class="setup-step__item active">
+									<span class="setup-step__number"> STEP <span>02</span>
+									</span>
+									<div class="setup-step__ct">
+										<h3 class="setup-step__ct-ttl">
+											<span class="setup-step__ct-ttl--img">
+												<img src="./img/icon-05.png" alt="Let CoachDash Bot Join Your Calls" class="img-01">
+												<img src="./img/icon-05-blue.png" alt="Let CoachDash Bot Join Your Calls" class="img-02">
+											</span> Let CoachDash Bot Join Your Calls </h3>
+										<p> Our intelligent notetaker seamlessly connects to your scheduled meetings, capturing every detail without interrupting the flow. </p>
+									</div>
+								</li>
+								<li class="setup-step__item">
+									<span class="setup-step__number"> STEP <span>03</span>
+									</span>
+									<div class="setup-step__ct">
+										<h3 class="setup-step__ct-ttl">
+											<span class="setup-step__ct-ttl--img">
+												<img src="./img/icon-06.png" alt="Receive Ready-to-Share Reports" class="img-01">
+												<img src="./img/icon-06-blue.png" alt="Receive Ready-to-Share Reports" class="img-02">
+											</span> Receive Ready-to-Share Reports </h3>
+										<p> Instantly get fully formatted, actionable reports automatically generated and waiting for your approval. </p>
+									</div>
+								</li>
+							</ul>
+							<a href="" class="c-btn__01"> See CoachDash In Action </a>
+						</div>
+						<div class="setup-block__img">
+							<div class="setup-block__img-item">
+								<img src="./img/setup-01.png" alt="Sync Your Calendar and Log In">
+							</div>
+							<div class="setup-block__img-item active">
+								<img src="./img/setup-02.png" alt="Let CoachDash Bot Join Your Calls">
+							</div>
+							<div class="setup-block__img-item">
+								<img src="./img/setup-03.png" alt="Receive Ready-to-Share Reports">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="sec-ograni">
+				<div class="inner">
+					<div class="ograni-block">
+						<div class="ograni-block__img">
+							<div class="img">
+								<img src="./img/img-04.png" alt="Empowering Internal Coaches for Organizational Growth">
+							</div>
+						</div>
+						<div class="ograni-block__ct c-txt__basic">
+							<h2 class="c-ttl__01"> Empowering Internal Coaches for<span>Organizational Growth</span>
+							</h2>
+							<p class="mbpc-43 mbsp-20"> CoachDash is built not only for independent coaches but also for internal coaching teams within organizations. Here’s how it helps: </p>
+							<ul class="ograni-list">
+								<li class="ograni-list__item">
+									<img src="./img/icon-07.png" alt="Scalable Coaching for Teams">
+									<h3 class="ograni-list__ttl">Scalable Coaching for Teams</h3>
+									<p> Easily manage multiple coaching engagements across departments with consistent reporting and analytics. </p>
+								</li>
+								<li class="ograni-list__item">
+									<img src="./img/icon-08.png" alt="Alignment with Company Goals">
+									<h3 class="ograni-list__ttl">Alignment with Company Goals</h3>
+									<p> Track progress and measure impact against organizational KPIs. </p>
+								</li>
+								<li class="ograni-list__item">
+									<img src="./img/icon-09.png" alt="Consistency in Reporting">
+									<h3 class="ograni-list__ttl">Consistency in Reporting</h3>
+									<p> Ensure a unified coaching standard with structured, secure reports that maintain confidentiality and are compliant with coaching ethics. </p>
+									<a href="" class="c-btn__01 c-btn__01--arrow">Schedule a consultation</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="sec-change">
+				<div class="inner">
+					<div class="change-block">
+						<div class="change-block__ct c-txt__basic">
+							<h2 class="c-ttl__01"> Empowering Coachees for<span>Lasting Change</span>
+							</h2>
+							<p class="mbpc-43 mbsp-20"> CoachDash benefits coachees by offering: </p>
+							<ul class="ograni-list">
+								<li class="ograni-list__item">
+									<img src="./img/icon-10.png" alt="Personalized Feedback">
+									<h3 class="ograni-list__ttl">Personalized Feedback</h3>
+									<p> Coachees receive clear, targeted insights aligned with their development goals. </p>
+								</li>
+								<li class="ograni-list__item">
+									<img src="./img/icon-11.png" alt="Visible Progress">
+									<h3 class="ograni-list__ttl">Visible Progress</h3>
+									<p> Coachees can see their growth over time, leading to increased motivation and engagement. </p>
+								</li>
+								<li class="ograni-list__item">
+									<img src="./img/icon-12.png" alt="Actionable Insights">
+									<h3 class="ograni-list__ttl">Actionable Insights</h3>
+									<p> Coachees gain practical takeaways that drive meaningful change in both personal and professional spheres. </p>
+									<a href="" class="c-btn__01 c-btn__01--arrow">Start Now</a>
+								</li>
+							</ul>
+						</div>
+						<div class="change-block__img">
+							<div class="img">
+								<img src="./img/img-05.png" alt="Empowering Internal Coaches for Organizational Growth">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="sec-unlock">
+				<div class="inner">
+					<h2 class="c-ttl__01 c-al--c"> Unlock the<span>Full Potential</span>of<br> Your Coaching Practice </h2>
+					<div class="c-txt__basic c-al--c mbpc-25 mbsp-25">
+						<p> What could you achieve with CoachDash? </p>
+					</div>
+					<div class="unlock-block">
+						<div class="unlock-block__item">
+							<div class="unlock-block__note c-txt__basic">
+								<img src="./img/icon-07.png" alt="Strengthen Client Relationships">
+								<h3 class="unlock-block__note-ttl">Strengthen Client Relationships</h3>
+								<p> Research shows that the coaching relationship is the #1 predictor of positive outcomes. </p>
+							</div>
+							<div class="unlock-block__note c-txt__basic">
+								<img src="./img/icon-13.png" alt="Boost Your Productivity">
+								<h3 class="unlock-block__note-ttl">Boost Your Productivity</h3>
+								<p> Spend more time coaching, less time on admin. </p>
+							</div>
+						</div>
+						<div class="unlock-block__img">
+							<img src="./img/img-06.png" alt="Unlock the Full Potential of Your Coaching Practice">
+						</div>
+						<div class="unlock-block__item">
+							<div class="unlock-block__note c-txt__basic">
+								<img src="./img/icon-11.png" alt="Track Progress Objectively">
+								<h3 class="unlock-block__note-ttl">Track Progress Objectively</h3>
+								<p> Measure growth with research-backed metrics. </p>
+							</div>
+							<div class="unlock-block__note c-txt__basic">
+								<img src="./img/icon-14.png" alt="Demonstrate Your Impact">
+								<h3 class="unlock-block__note-ttl">Demonstrate Your Impact</h3>
+								<p> Generate professional reports to showcase your value to clients and organizations. </p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="sec-security">
+				<div class="inner">
+					<div class="security-heading c-txt__basic c-al--c">
+						<img src="./img/icon-15.png" alt="Your security is our #1 priority">
+						<h2 class="c-ttl__01">Your security is our #1 priority</h2>
+						<p> We enforce robust security policies to ensure your account is always safe </p>
+						<a href="" class="c-btn__01 c-btn__01--default">Learn more about our security policies</a>
+					</div>
+					<ul class="security-list c-txt__basic">
+						<li class="security-list__item">
+							<div class="security-list__box">
+								<img src="./img/icon-16.png" alt="Privacy and Security is part of our DNA">
+								<p> Privacy and Security is part of our DNA </p>
+							</div>
+						</li>
+						<li class="security-list__item">
+							<div class="security-list__box">
+								<img src="./img/icon-17.png" alt="Industry-leading security measures in place to ensure confidentiality.">
+								<p> Industry-leading security measures in place to ensure confidentiality. </p>
+							</div>
+						</li>
+						<li class="security-list__item">
+							<div class="security-list__box">
+								<img src="./img/icon-18.png" alt="Trusted by leading coaching experts and organizations.">
+								<p> Trusted by leading coaching experts and organizations. </p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="sec-question">
+				<div class="inner">
+					<div class="question-block">
+						<div class="question-block__heading c-txt__basic">
+							<h2 class="c-ttl__01"> Have Questions?<br class="pc">We Have<span>Answers</span>
+							</h2>
+							<p> Want to know more? You can email us anytime at<a href="mailto:support@coachdash.com">support@coachdash.com.</a>
+							</p>
+							<a href="" class="c-btn__01">Contact Support</a>
+						</div>
+						<div class="question-block__ct c-txt__basic">
+							<dl class="question-block__ct-item">
+								<dt> What is CoachDash? </dt>
+								<dd> Yes! By providing data-driven insights and professional reports, CoachDash helps you demonstrate your value to clients and organizations. This can lead to increased client retention and referrals, ultimately growing your coaching practice. </dd>
+							</dl>
+							<dl class="question-block__ct-item">
+								<dt> How does CoachDash improve coaching outcomes? </dt>
+								<dd> Yes! By providing data-driven insights and professional reports, CoachDash helps you demonstrate your value to clients and organizations. This can lead to increased client retention and referrals, ultimately growing your coaching practice. </dd>
+							</dl>
+							<dl class="question-block__ct-item">
+								<dt> Is my data secure on CoachDash? </dt>
+								<dd> Yes! By providing data-driven insights and professional reports, CoachDash helps you demonstrate your value to clients and organizations. This can lead to increased client retention and referrals, ultimately growing your coaching practice. </dd>
+							</dl>
+							<dl class="question-block__ct-item">
+								<dt> What kind of reports can I generate with CoachDash? </dt>
+								<dd> Yes! By providing data-driven insights and professional reports, CoachDash helps you demonstrate your value to clients and organizations. This can lead to increased client retention and referrals, ultimately growing your coaching practice. </dd>
+							</dl>
+							<dl class="question-block__ct-item">
+								<dt> How does CoachDash integrate with my existing tools? </dt>
+								<dd> Yes! By providing data-driven insights and professional reports, CoachDash helps you demonstrate your value to clients and organizations. This can lead to increased client retention and referrals, ultimately growing your coaching practice. </dd>
+							</dl>
+							<dl class="question-block__ct-item">
+								<dt> Can CoachDash help me grow my coaching business? </dt>
+								<dd> Yes! By providing data-driven insights and professional reports, CoachDash helps you demonstrate your value to clients and organizations. This can lead to increased client retention and referrals, ultimately growing your coaching practice. </dd>
+							</dl>
+						</div>
 					</div>
 				</div>
 			</section>
