--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 					</div>
 					<div class="setup-block">
 						<div class="setup-block__ct">
-							<ul class="setup-step c-txt__basic">
-								<li class="setup-step__item js-scrollin">
+							<ul class="setup-step slider-nav c-txt__basic">
+								<li class="setup-step__item active js-scrollin">
 									<span class="setup-step__number"> STEP <span>01</span>
 									</span>
 									<div class="setup-step__ct">
@@ -105,11 +105,11 @@
 											</span> Sync Your Calendar and Log In </h3>
 										<p> With a few clicks, integrate your calendar and access your personalized CoachDash dashboard. </p>
 									</div>
-									<div class="setup-step__ct-img">
+									<div class="setup-step__ct-img active">
 										<img src="./img/setup-01.png" alt="Sync Your Calendar and Log In">
 									</div>
 								</li>
-								<li class="setup-step__item active js-scrollin">
+								<li class="setup-step__item js-scrollin">
 									<span class="setup-step__number"> STEP <span>02</span>
 									</span>
 									<div class="setup-step__ct">
@@ -142,7 +142,7 @@
 							</ul>
 							<a href="" class="c-btn__01 js-scrollin"> See CoachDash In Action </a>
 						</div>
-						<div class="setup-block__img js-scrollin">
+						<div class="setup-block__img slider-for js-scrollin">
 							<div class="setup-block__img-item">
 								<img src="./img/setup-01.png" alt="Sync Your Calendar and Log In">
 							</div>
@@ -154,10 +154,6 @@
 							</div>
 						</div>
 					</div>
-				</div>
-			</section>
-			<section class="sec-ograni">
-				<div class="inner">
 					<div class="ograni-block" id="ograni">
 						<div class="ograni-block__img js-scrollin">
 							<div class="img">
@@ -188,10 +184,6 @@
 							</ul>
 						</div>
 					</div>
-				</div>
-			</section>
-			<section class="sec-change">
-				<div class="inner">
 					<div class="change-block">
 						<div class="change-block__ct c-txt__basic">
 							<h2 class="c-ttl__01 js-scrollin"> Empowering Coachees for<span>Lasting Change</span>
