--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<p> Enhance client outcomes and streamline your workflow </p>
 						<div class="mv-item__btn">
 							<a href="" class="mv-item__btn mv-item__btn--default">Get started</a>
-							<a href="" class="mv-item__btn c-bg--white c-fc--blue">Explore the Platform</a>
+							<a href="#setup" class="mv-item__btn c-bg--white c-fc--blue js-anchor">Explore the Platform</a>
 						</div>
 						<ul class="mv-item__option">
 							<li><img src="./img/icon-01.png" alt="GROUNDED IN RESEARCH">GROUNDED IN RESEARCH</li>
@@ -179,7 +179,7 @@
 									<img src="./img/icon-09.png" alt="Consistency in Reporting">
 									<h3 class="ograni-list__ttl">Consistency in Reporting</h3>
 									<p> Ensure a unified coaching standard with structured, secure reports that maintain confidentiality and are compliant with coaching ethics. </p>
-									<a href="" class="c-btn__01 c-btn__01--arrow">Schedule a consultation</a>
+									<a href="https://calendly.com/carlorubins/coachdash-introduction" target="_blank" class="c-btn__01 c-btn__01--arrow">Schedule a consultation</a>
 								</li>
 							</ul>
 						</div>
@@ -204,7 +204,7 @@
 									<img src="./img/icon-12.png" alt="Actionable Insights">
 									<h3 class="ograni-list__ttl">Actionable Insights</h3>
 									<p> Coachees gain practical takeaways that drive meaningful change in both personal and professional spheres. </p>
-									<a href="" class="c-btn__01 c-btn__01--arrow">Start Now</a>
+									<a href="https://forms.gle/x3djnWChpkS4DfFE7" target="_blank" class="c-btn__01 c-btn__01--arrow">Start Now</a>
 								</li>
 							</ul>
 						</div>
@@ -348,7 +348,7 @@
 							<h3 class="pricing-block__ttl">Enterprise Solutions</h3>
 							<p> Tailored packages for organizations with advanced needs. Contact us for a custom quote. </p>
 							<div class="pricing-block__price"> Custom Pricing </div>
-							<a href="" class="c-btn__01 c-btn__01--arrow">Schedule a Consultation</a>
+							<a href="https://calendly.com/carlorubins/coachdash-introduction" target="_blank" class="c-btn__01 c-btn__01--arrow">Schedule a Consultation</a>
 							<ul class="pricing-block__note">
 								<li>All of the MVP features</li>
 								<li>Custom deployment and integration support</li>
