--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<span class="mv-item__ttl">Unlock Insights, Drive Results</span>
 						<p> Enhance client outcomes and streamline your workflow </p>
 						<div class="mv-item__btn">
-							<a href="" class="mv-item__btn mv-item__btn--default">Get started</a>
+							<a href="https://forms.gle/x3djnWChpkS4DfFE7" target="_blank" class="mv-item__btn mv-item__btn--default">Get started</a>
 							<a href="#setup" class="mv-item__btn c-bg--white c-fc--blue js-anchor">Explore the Platform</a>
 						</div>
 						<ul class="mv-item__option">
@@ -140,7 +140,7 @@
 									</div>
 								</li>
 							</ul>
-							<a href="" class="c-btn__01 js-scrollin"> See CoachDash In Action </a>
+							<a href="https://forms.gle/x3djnWChpkS4DfFE7" target="_blank" class="c-btn__01 js-scrollin"> See CoachDash In Action </a>
 						</div>
 						<div class="setup-block__img slider-for js-scrollin">
 							<div class="setup-block__img-item">
@@ -291,7 +291,7 @@
 							</h2>
 							<p> Want to know more? You can email us anytime at<a href="mailto:support@coachdash.com">support@coachdash.com.</a>
 							</p>
-							<a href="" class="c-btn__01">Contact Support</a>
+							<a href="mailto:support@coachdash.com" class="c-btn__01">Contact Support</a>
 						</div>
 						<div class="question-block__ct c-txt__basic">
 							<dl class="question-block__ct-item js-scrollin">
@@ -334,7 +334,7 @@
 							<p> Get full access to all features during our special launch period for individual coaches. Limited time offer! </p>
 							<div class="pricing-block__price"> $159<small>/Month</small>
 							</div>
-							<a href="" class="c-btn__01 c-btn__01--arrow">Get Started</a>
+							<a href="https://forms.gle/x3djnWChpkS4DfFE7" target="_blank" class="c-btn__01 c-btn__01--arrow">Get Started</a>
 							<ul class="pricing-block__note">
 								<li>All core features</li>
 								<li>Advanced coaching analysis</li>
