--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-		<title></title>
-		<meta name="description" content="">
+		<title>CoachDash.com: Elevate Your Coaching with Data-Driven Insights</title>
+		<meta name="description" content="CoachDash.com empowers coaches with data-driven insights and streamlined workflows. Enhance client outcomes, track progress objectively, and showcase your impact. Perfect for independent coaches and organizations. Elevate your coaching practice today.">
 		<meta name="keywords" content="">
 		<meta name="format-detection" content="telephone=no">
 		<link type="text/css" rel="stylesheet" href="./css/slick-theme.css">
