--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 						<img src="./img/icon-15.png" alt="Your security is our #1 priority">
 						<h2 class="c-ttl__01">Your security is our<br class="sp-sm">#1 priority</h2>
 						<p> We enforce robust security policies to ensure your account is always safe </p>
-						<a href="" class="c-btn__01 c-btn__01--default">Learn more about our security policies</a>
+						<a href="https://coachdashcom.trustshare.com/home?fbclid=IwY2xjawFX5a5leHRuA2FlbQIxMAABHTkWetrBYGz9SPoggROCa1aenRGnumFHw1QBrkk4PfJT_8c7im7iBe5z5A_aem_ZI7I5_e9zx5Pa-3gF-en9w" target="_blank" class="c-btn__01 c-btn__01--default">Learn more about our security policies</a>
 					</div>
 					<ul class="security-list c-txt__basic">
 						<li class="security-list__item js-scrollin">
